--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,41 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-    <h1>Hello webpack</h1>
+    <header class="header">
+        <nav class="nav">
+            <h1>Leaderboard</h1>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <div class="container">
+                <div class="scores-section">
+                    <div class="recent-scores">
+                        <div class="score-panel">
+                            <div class="score-panel-header">
+                                <h2>Recent scores</h2>
+                                <button type="submit" class="btn" id="refresh-score">Refresh</button>
+                            </div>
+                            <div class="scores" id="scores"></div>
+                        </div>
+                    </div>
+                    <div class="score-form">
+                        <h2 class="score-form-header">Add your score</h2>
+                        <form action="#">
+                            <div class="field">
+                                <input type="text" name="name" id="your-name" placeholder="Your name">
+                            </div>
+                            <div class="field">
+                                <input type="text" name="score" id="your-score" placeholder="Your score">
+                            </div>
+                            <div>
+                                <button type="submit" class="btn" id="add-score">Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
